Got the JWT token validating it failed